# zuulcilint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .zuul.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test-release.yml  tox.yml
docs/: configuration.md  zuulcilint.example.yaml
tests/: __init__.py  conftest.py  test_checker.py  test_config.py  test_utils.py  test_zuulcilint.py  test_zuullint.py
tests/zuul_data/: invalid-extension-yaml.yml  jobs.yaml  jobs2.yaml  nodeset.yaml  pipelines.yaml  pragma.yaml  project.yaml  queue.yaml  secrets.yaml  semaphore.yaml
tests/zuul_data_invalid/: zuul-config-invalid.yaml  zuul-config-invalid.yml
zuulcilint/: __init__.py  __main__.py  checker.py  config-schema.json  config.py  utils.py  zuul-schema.json
zuullint/: __init__.py  __main__.py  checker.py  utils.py  version.py  zuul-schema.json
