[metadata]
name = zuullint
description = Zuul Job Config Linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codesquadnest/zuullint
author = Pedro Baptista
author_email = pedro.miguel.baptista@gmail.com
project_urls =
    Source=https://github.com/codesquadnest/zuullint
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
use_scm_version = True
packages = find:
include_package_data = true
install_requires =
    pyyaml
    jsonschema
    six
python_requires = >=3.8

[options.entry_points]
console_scripts =
    zuullint = zuullint.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
